Fix issue with hotel/:hotelId/reservartions api
